--- a/indexen.html
+++ b/indexen.html
@@ -19,9 +19,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
-  <title>Juliano Giotti | Game Developer En</title>
+  <title>Juliano Giotti | Unity Developer EN</title>
   <meta name="keywords" content="JuGtt, Juliano Giotti, Unity" />
-  <meta name="description" content="Juliano Giotti | Game Developer" />
+  <meta name="description" content="Juliano Giotti | Unity Developer" />
 
   <link rel="icon" type="image/png" href="./assets/GamePadIcon.png" />
 
@@ -29,14 +29,14 @@
 
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jugtt.github.io/Portfolio/" />
-  <meta property="og:title" content="Juliano Giotti | Game Developer" />
+  <meta property="og:title" content="Juliano Giotti | Unity Developer EN" />
   <meta property="og:description" content="Juliano Giotti Portfolio" />
   <meta property="og:image" content="https://jugtt.github.io/Portfolio/assets/preview.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://jugtt.github.io/Portfolio/" />
-  <meta property="twitter:title" content="Juliano Giotti | Game Developer" />
+  <meta property="twitter:title" content="Juliano Giotti | Unity Developer" />
   <meta property="twitter:description" content="Juliano Giotti Portfolio" />
   <meta property="twitter:image" content="https://jugtt.github.io/Portfolio/assets/preview.png" />
 
@@ -60,7 +60,7 @@
       <h1 class="hero-title">
         Hi! My name is <span class="text-color-main name">Juliano Giotti</span>
         <br />
-        I'm a Game Developer.
+        I'm a Unity Developer.
       </h1>
       <p class="hero-cta">
         <a class="cta-btn cta-btn--hero" href="index.html">Back to Portuguese</a>
