--- a/indexen.html
+++ b/indexen.html
@@ -31,14 +31,14 @@
   <meta property="og:url" content="https://jugtt.github.io/Portfolio/" />
   <meta property="og:title" content="Juliano Giotti | Unity Developer EN" />
   <meta property="og:description" content="Juliano Giotti Portfolio" />
-  <meta property="og:image" content="https://jugtt.github.io/Portfolio/assets/preview.png" />
+  <meta property="og:image" content="https://jugtt.github.io/Portfolio/assets/previewEN.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://jugtt.github.io/Portfolio/" />
   <meta property="twitter:title" content="Juliano Giotti | Unity Developer" />
   <meta property="twitter:description" content="Juliano Giotti Portfolio" />
-  <meta property="twitter:image" content="https://jugtt.github.io/Portfolio/assets/preview.png" />
+  <meta property="twitter:image" content="https://jugtt.github.io/Portfolio/assets/previewEN.png" />
 
   <!-- link tags -->
   <link rel="preload" as="style" href="./css/main.css" />
@@ -356,6 +356,6 @@
 
 <style>
   .a {
-    content: url("./assets/preview.png");
+    content: url("./assets/previewEN.png");
   }
 </style>
