Changed to business email

--- a/indexen.html
+++ b/indexen.html
@@ -307,10 +307,10 @@
       <h2 class="section-title">Contact</h2>
       <div class="contact-wrapper">
         <p class="contact-wrapper__text">Open to new opportunities. <br> Feel free to reach out for a chat:</p>
-        <a href="mailto:juli-giotti@hotmail.com" class="cta-btn cta-btn--resume">
+        <a href="mailto:jugttdev@gmail.com" class="cta-btn cta-btn--resume">
           Send Email
         </a>
-        <p class="contact-wrapper__text" style="margin-top: 20px; font-size: 1.8rem;">juli-giotti@hotmail.com</p>
+        <p class="contact-wrapper__text" style="margin-top: 20px; font-size: 1.8rem;">jugttdev@gmail.com</p>
       </div>
     </div>
   </section>
