--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
       <h2 class="section-title">Contato</h2>
       <div class="contact-wrapper">
         <p class="contact-wrapper__text">Aberto a novas oportunidades. <br> Me chama para conversarmos:</p>
-        <a href="mailto:juli-giotti@hotmail.com" class="cta-btn cta-btn--resume">
+        <a href="mailto:jugttdev@gmail.com" class="cta-btn cta-btn--resume">
           Enviar Email
         </a>
-        <p class="contact-wrapper__text" style="margin-top: 20px; font-size: 1.8rem;">juli-giotti@hotmail.com</p>
+        <p class="contact-wrapper__text" style="margin-top: 20px; font-size: 1.8rem;">jugttdev@gmail.com</p>
       </div>
     </div>
   </section>
